  - Fixed defect #645 IMDB plots with embedded HTML tags are now parsed correctly
  - Fixed defect #649 Manually decode some Cp1251 values that Kinopoisk uses &#xxx; entities for
  - Fixed defect #662 FilmDeltaSEPlugin can't handle "illegal HTML characters"
  - Fixed defect #666 Can't connect to imdb behind authenticated proxy
  - Fixed defect #667 Can't download image behind authenticated proxy
  - Fixed defect #670 BD structure in excluded directory causes exception
  - Enhancement  #671 Option to create posters for set masters
  - Fixed defect #673 Sets no longer appear on categories.html page
  - Enhancement  #675 (Default skin only for now) Play all files in a set by highlighting the set and pressing "play" button on remote
  - Fixed defect #676 MovieMeterPlugin: problem when no movie duration is available
  - Fixed defect #677 Exception in MovieMeterPlugin
  - Fixed defect #678 Get Season 0 information from TheTVDB.com
  - Enhancement  #683 Ability to resize episode screenshot
  - Fixed defect #687 Label season 0 as "Specials"
  - Fixed defect #688 index_sd.htm not transfered to output dir
  - Fixed defect #691 Episode images vanish in the skin after new episodes are added
  - Fixed defect #692 Null pointer exception when episode images are unavailable
  - Enhancement  #697 MovieMeterPlugin: download fanart based on IMDB id returned from moviemeter.nl\
  - Fixed defect #696 Trailer link duplication
  - Enhancement  #700 (Optionally) Recursively scan parent dirs (up to library root) for directory-level NFOs
  - Enhancement  #703 Index by library description (if present)
  - Enhancement  #705 Speed up XSLT processing
  - Enhancement  #712 Patch for Kinopoisk plugin
                        1. Extract original movie name from Kinopoisk page.
                        2. Extract IMDB rating from Kinopoisk page if needed.
                        3. Better search for movie info page.


MovieJukebox 1.0.16 beta
------------------------